[gd_scene load_steps=7 format=3 uid="uid://p1gv2u05pahj"]

[ext_resource type="Theme" uid="uid://bqt13gd00jakt" path="res://Themes/Theme.tres" id="1_7ak14"]
[ext_resource type="Script" path="res://Code/SceneCode/Individuals/ChipinInv.gd" id="2_3jqea"]
[ext_resource type="Texture2D" uid="uid://ddjnp1e1pss0g" path="res://Icons/MenuIcons/icons-set-2_0000s_0029__Group_.png" id="3_oyvs3"]
[ext_resource type="Texture2D" uid="uid://bqks45w4cuv2n" path="res://Art/857-8579317_ftestickers-effect-overlay-glow-white-universe-2663166295.png" id="4_nxxrm"]
[ext_resource type="Texture2D" uid="uid://p4702lq24xjg" path="res://Art/4Tb6Xje4c-3913742659.png" id="5_n1lsq"]
[ext_resource type="Texture2D" uid="uid://di002mjuracya" path="res://Art/die.png" id="6_g1jyo"]

[node name="MenuItem" type="PanelContainer"]
custom_minimum_size = Vector2(330, 52)
offset_right = 330.0
offset_bottom = 52.0
size_flags_vertical = 4
theme = ExtResource("1_7ak14")
script = ExtResource("2_3jqea")

[node name="Button" type="Button" parent="."]
layout_mode = 2
flat = true

[node name="MarginContainer" type="MarginContainer" parent="Button"]
layout_mode = 2
offset_right = 330.0
offset_bottom = 52.0

[node name="Chip1" type="HBoxContainer" parent="Button/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_7ak14")

[node name="TextureRect" type="TextureRect" parent="Button/MarginContainer/Chip1"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
texture = ExtResource("3_oyvs3")
expand_mode = 5
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Button/MarginContainer/Chip1"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="RichTextLabel" type="RichTextLabel" parent="Button/MarginContainer/Chip1/MarginContainer"]
custom_minimum_size = Vector2(235, 0)
layout_mode = 2
theme = ExtResource("1_7ak14")
bbcode_enabled = true
text = "[center]wordiest ever Chip [color=yellow]CPU: 24[/color] 6/6 [/center]"

[node name="Characters" type="GridContainer" parent="Button/MarginContainer/Chip1"]
custom_minimum_size = Vector2(42, 20)
layout_mode = 2
columns = 2

[node name="DreamerStatus" type="TabContainer" parent="Button/MarginContainer/Chip1/Characters"]
visible = false
modulate = Color(0.956863, 0.537255, 0.168627, 1)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
tabs_visible = false
use_hidden_tabs_for_min_size = true

[node name="TextureRect" type="TextureRect" parent="Button/MarginContainer/Chip1/Characters/DreamerStatus"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("4_nxxrm")
expand_mode = 4
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Button/MarginContainer/Chip1/Characters/DreamerStatus"]
visible = false
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("5_n1lsq")
expand_mode = 4
stretch_mode = 5

[node name="LonnaStatus" type="TabContainer" parent="Button/MarginContainer/Chip1/Characters"]
visible = false
modulate = Color(0.596078, 0, 0.862745, 1)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
tabs_visible = false
use_hidden_tabs_for_min_size = true

[node name="TextureRect" type="TextureRect" parent="Button/MarginContainer/Chip1/Characters/LonnaStatus"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("4_nxxrm")
expand_mode = 4
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Button/MarginContainer/Chip1/Characters/LonnaStatus"]
visible = false
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("5_n1lsq")
expand_mode = 4
stretch_mode = 5

[node name="DamirStatus" type="TabContainer" parent="Button/MarginContainer/Chip1/Characters"]
visible = false
modulate = Color(0.160784, 0.160784, 0.917647, 1)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
tabs_visible = false
use_hidden_tabs_for_min_size = true

[node name="TextureRect" type="TextureRect" parent="Button/MarginContainer/Chip1/Characters/DamirStatus"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("4_nxxrm")
expand_mode = 4
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Button/MarginContainer/Chip1/Characters/DamirStatus"]
visible = false
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("5_n1lsq")
expand_mode = 4
stretch_mode = 5

[node name="PepperStatus" type="TabContainer" parent="Button/MarginContainer/Chip1/Characters"]
visible = false
modulate = Color(0.882353, 0.156863, 0.156863, 1)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
tabs_visible = false
use_hidden_tabs_for_min_size = true

[node name="TextureRect" type="TextureRect" parent="Button/MarginContainer/Chip1/Characters/PepperStatus"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("4_nxxrm")
expand_mode = 4
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Button/MarginContainer/Chip1/Characters/PepperStatus"]
visible = false
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("5_n1lsq")
expand_mode = 4
stretch_mode = 5

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-9, 23)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(314, 23)

[node name="Die" type="Sprite2D" parent="."]
position = Vector2(314, 23)
scale = Vector2(0.0686729, 0.0828982)
texture = ExtResource("6_g1jyo")

[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
